<resources>
    <string name="app_name">3Dify</string>
    <string name="secret_login_info">secret_login_info</string>
    <string name="non_member">Non-Member</string>
    <string name="member">Member</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="username">ID</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="threed">3D Workspace</string>
    <string name="gallery">Gallery</string>
    <string name="page_title">3Dify</string>
    <string name="email">123@email.com</string>
    <string name="register">Sign Up</string>
    <string name="username_error">Wrong Username</string>
    <string name="email_error">Wrong Email</string>
    <string name="password_error">Wrong Password</string>
    <string name="password_mismatch_error">Password Not Matching</string>
    <string name="server_client_id">423296288365-tnadkkvggct11g8v48jlfpp933e68dub.apps.googleusercontent.com</string>
</resources>